--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -48,6 +48,7 @@
   padding-bottom: $sp-2;
   padding-left: #{$gutter-spacing-sm + $sp-5};
   font-size: 16px;
+  color: $search-text-color;
   background-color: $search-background-color;
   border-top: 0;
   border-right: 0;
