--- a/_sass/support/_variables.scss
+++ b/_sass/support/_variables.scss
@@ -33,6 +33,7 @@ $font-size-10-sm: 48px !default;
 //
 
 $white: #fff !default;
+$black: #000 !default;
 
 $grey-dk-000: #959396 !default;
 $grey-dk-100: #5c5962 !default;
@@ -72,6 +73,7 @@ $red-300: #dd2e2e !default;
 
 $body-background-color: $white !default;
 $sidebar-color: $grey-lt-000 !default;
+$search-text-color: $black !default;
 $search-background-color: $white !default;
 $table-background-color: $white !default;
 $code-background-color: $grey-lt-000 !default;
